<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/deleteImages"
        android:title="@string/DeleteImagesChoiceInMenu" />
    <item android:id="@+id/slideshowImages"
        android:title="@string/SlideshowImagesInMenu" />
    <item android:id="@+id/removeImagesFromFavorites"
        android:title="@string/RemoveImagesFromFavoritesInMenu" />
    <item android:id="@+id/backupImages"
        android:title="@string/BackupInMenu" />
    <item android:id="@+id/deleteBackupImages"
        android:title="@string/DeleteBackupTitle" />
    <item android:id="@+id/downloadBackupImages"
        android:title="@string/DownloadInMenu" />
    <item android:id="@+id/selectAllImages"
        android:title="@string/SelectAllTitle" />
</menu>